# SimdRainbowCrack

./: CMakeLists.txt  README.md
src/: Chain.hpp  RainbowTable.cpp  RainbowTable.hpp  Reduce.hpp  SimdHashBuffer.hpp  Util.cpp  Util.hpp  WordGenerator.cpp  WordGenerator.hpp  main.cpp
test/: biginttest.cpp  rainbowtest.cpp  randomfromtable.cpp  reductionperf.cpp  reductiontest.cpp  resumetest.cpp  testbed.cpp  wordgeneratortest.cpp
